// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JustificationsPage Shows a justified proposition 1`] = `
<div>
  <div
    id="justifications-page"
  >
    <div
      class="md-grid md-grid--top"
    >
      <div />
      <div
        class="md-cell md-cell--12"
      >
        <div
          class=""
        >
          <div
            class="root-target-background"
          >
            <div
              class="rmd-card rmd-card--shadowed root-target-card"
              style="width: 100%;"
            >
              <div
                class="rmd-card__content rmd-card__content--padded rmd-card__content--extra-padding rmd-card__content--remove-margin rmd-card__content--secondary root-target-card-contents"
              >
                <div
                  class="entity-viewer"
                >
                  <div
                    class="entity-viewer--header"
                  >
                    <a
                      href="/p/1/the-proposition-text"
                    >
                      <i
                        class="md-icon material-icons"
                        role="presentation"
                        title="Proposition"
                      >
                        short_text
                      </i>
                    </a>
                  </div>
                  <div
                    class="entity-viewer--entity"
                  >
                    <div
                      class="proposition-viewer"
                      id="justifications-page--root-target--proposition-entity-viewer"
                    >
                      <div
                        class="proposition-viewer"
                      >
                        <div
                          class="proposition-text"
                        >
                          <a
                            href="/p/1/the-proposition-text"
                          >
                            the-proposition-text
                          </a>
                        </div>
                        <div
                          class="relation-counts"
                        >
                           
                          <a
                            href="/propositions/1/usages"
                            title="used in 0 justifications"
                          >
                            <span
                              class="material-symbols"
                              style="font-variation-settings: "opsz" 12; font-size: 12px;"
                            >
                              merge_type
                            </span>
                            0
                          </a>
                           
                          <span
                            class="entity-status-text"
                          >
                            <a
                              class="clickable"
                              title="0 appearances"
                            >
                              <span
                                class="material-symbols"
                                style="font-variation-settings: "opsz" 12; font-size: 12px;"
                              >
                                pin_drop
                              </span>
                              0
                            </a>
                          </span>
                        </div>
                        <div>
                          <span
                            class="entity-status-text"
                          >
                            created
                            
                             
                            <span
                              title="12 Jan 2023 4:23:12 PM +00:00"
                            >
                              8 hours ago
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="md-layover md-layover--simplified md-inline-block md-menu-container context-menu context-menu--proposition"
                    id="justifications-page--root-target--menu"
                  >
                    <button
                      class="md-btn md-btn--icon md-pointer--hover md-inline-block hidden"
                      id="justifications-page--root-target--menu-toggle"
                      title="Actions"
                      type="button"
                    >
                      <div
                        class="md-ink-container"
                      />
                      <i
                        class="md-icon material-icons md-text--inherit"
                      >
                        more_vert
                      </i>
                    </button>
                  </div>
                </div>
                <div
                  class="chips-list"
                >
                  <button
                    class="rmd-button rmd-button--icon rmd-button--text-primary"
                    title="Add tag"
                    type="button"
                  >
                    <i
                      aria-hidden="true"
                      class="rmd-icon rmd-icon--font material-icons"
                    >
                      add
                    </i>
                    <span
                      class="rmd-ripple-container"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="md-cell md-cell--12 cell--centered-contents"
      >
        <div>
          No justifications.
        </div>
      </div>
      <div
        class="md-cell md-cell--12 cell--centered-contents"
      >
        <button
          class="rmd-button rmd-button--text rmd-button--text-primary"
          type="button"
        >
          Add one now
          <span
            class="rmd-ripple-container"
          />
        </button>
      </div>
    </div>
    <div
      class="md-grid--bottom md-grid"
    >
      <div
        class="md-cell md-cell--6 md-cell--8-tablet md-cell--4-phone proposition-justifications-justification-trees--positive"
        style="position: relative;"
      />
      <div
        class="md-cell md-cell--6 md-cell--8-tablet md-cell--4-phone proposition-justifications-justification-trees--negative"
        style="position: relative;"
      />
    </div>
  </div>
</div>
`;

exports[`JustificationsPage can add a compound-based justification 1`] = `
<div>
  <div
    id="justifications-page"
  >
    <div
      class="md-grid md-grid--top"
    >
      <div />
      <div
        class="md-cell md-cell--12"
      >
        <div
          class=""
        >
          <div
            class="root-target-background"
          >
            <div
              class="rmd-card rmd-card--shadowed root-target-card"
              style="width: 100%;"
            >
              <div
                class="rmd-card__content rmd-card__content--padded rmd-card__content--extra-padding rmd-card__content--remove-margin rmd-card__content--secondary root-target-card-contents"
              >
                <div
                  class="entity-viewer"
                >
                  <div
                    class="entity-viewer--header"
                  >
                    <a
                      href="/p/1/the-proposition-text"
                    >
                      <i
                        class="md-icon material-icons"
                        role="presentation"
                        title="Proposition"
                      >
                        short_text
                      </i>
                    </a>
                  </div>
                  <div
                    class="entity-viewer--entity"
                  >
                    <div
                      class="proposition-viewer"
                      id="justifications-page--root-target--proposition-entity-viewer"
                    >
                      <div
                        class="proposition-viewer"
                      >
                        <div
                          class="proposition-text"
                        >
                          <a
                            href="/p/1/the-proposition-text"
                          >
                            the-proposition-text
                          </a>
                        </div>
                        <div
                          class="relation-counts"
                        >
                           
                          <a
                            href="/propositions/1/usages"
                            title="used in 0 justifications"
                          >
                            <span
                              class="material-symbols"
                              style="font-variation-settings: "opsz" 12; font-size: 12px;"
                            >
                              merge_type
                            </span>
                            0
                          </a>
                           
                          <span
                            class="entity-status-text"
                          >
                            <a
                              class="clickable"
                              title="0 appearances"
                            >
                              <span
                                class="material-symbols"
                                style="font-variation-settings: "opsz" 12; font-size: 12px;"
                              >
                                pin_drop
                              </span>
                              0
                            </a>
                          </span>
                        </div>
                        <div>
                          <span
                            class="entity-status-text"
                          >
                            created
                            
                             
                            <span
                              title="12 Jan 2023 4:23:12 PM +00:00"
                            >
                              8 hours ago
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="md-layover md-layover--simplified md-inline-block md-menu-container context-menu context-menu--proposition"
                    id="justifications-page--root-target--menu"
                  >
                    <button
                      class="md-btn md-btn--icon md-pointer--hover md-inline-block hidden"
                      id="justifications-page--root-target--menu-toggle"
                      title="Actions"
                      type="button"
                    >
                      <div
                        class="md-ink-container"
                      />
                      <i
                        class="md-icon material-icons md-text--inherit"
                      >
                        more_vert
                      </i>
                    </button>
                  </div>
                </div>
                <div
                  class="chips-list"
                >
                  <button
                    class="rmd-button rmd-button--icon rmd-button--text-primary"
                    title="Add tag"
                    type="button"
                  >
                    <i
                      aria-hidden="true"
                      class="rmd-icon rmd-icon--font material-icons"
                    >
                      add
                    </i>
                    <span
                      class="rmd-ripple-container"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="md-grid--bottom md-grid"
    >
      <div
        class="md-cell md-cell--6 md-cell--8-tablet md-cell--4-phone proposition-justifications-justification-trees--positive"
        style="position: relative;"
      >
        <h2
          class="md-cell md-cell--12"
          style="transition: transform 600ms ease 0ms, opacity 600ms ease 0ms;"
        >
          Supporting Justifications
        </h2>
        <div
          style="transition: transform 615ms ease 50ms, opacity 615ms ease 50ms;"
        >
          <div
            class="justification-tree"
            id="justification-1582-tree"
          >
            <div
              class="md-grid chat-bubble"
            >
              <div
                class="justification-basis-viewer-row"
              >
                <div
                  class="justification-basis-viewer"
                >
                  <ol
                    class="compound-viewer proposition-compound-viewer"
                  >
                    <li
                      class="compound-atom proposition-atom"
                      id="justification-1582-chat-bubble-basis-viewer--proposition-atom-911--list-item"
                    >
                      <div
                        class="entity-viewer"
                      >
                        <div
                          class="entity-viewer--header"
                        >
                          <a
                            href="/p/911/the-proposition-text-1"
                          >
                            <i
                              class="md-icon material-icons"
                              role="presentation"
                              title="Proposition"
                            >
                              short_text
                            </i>
                          </a>
                        </div>
                        <div
                          class="entity-viewer--entity"
                        >
                          <div
                            class="proposition-viewer"
                            id="justification-1582-chat-bubble-basis-viewer--proposition-atom-911--list-item--proposition"
                          >
                            <div
                              class="proposition-viewer"
                            >
                              <div
                                class="proposition-text"
                              >
                                <a
                                  href="/p/911/the-proposition-text-1?context-trail=j,1582,p"
                                >
                                  The proposition text 1
                                </a>
                              </div>
                              <div
                                class="relation-counts"
                              >
                                <a
                                  href="/p/911/the-proposition-text-1?context-trail=j,1582,p"
                                >
                                  <span
                                    title="0 supporting justifications; 0 opposing justifications"
                                  >
                                    <span
                                      class="material-symbols"
                                      style="font-variation-settings: "opsz" 12; font-size: 12px;"
                                    >
                                      merge
                                    </span>
                                    0
                                    +/
                                    0
                                    -
                                  </span>
                                </a>
                                 
                                <a
                                  href="/propositions/911/usages"
                                  title="used in 0 justifications"
                                >
                                  <span
                                    class="material-symbols"
                                    style="font-variation-settings: "opsz" 12; font-size: 12px;"
                                  >
                                    merge_type
                                  </span>
                                  0
                                </a>
                                 
                                <span
                                  class="entity-status-text"
                                >
                                  <a
                                    class="clickable"
                                    title="0 appearances"
                                  >
                                    <span
                                      class="material-symbols"
                                      style="font-variation-settings: "opsz" 12; font-size: 12px;"
                                    >
                                      pin_drop
                                    </span>
                                    0
                                  </a>
                                </span>
                              </div>
                              <div>
                                <span
                                  class="entity-status-text"
                                >
                                  created
                                  
                                   
                                  <span
                                    title=""
                                  />
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </li>
                    <li
                      class="compound-atom proposition-atom"
                      id="justification-1582-chat-bubble-basis-viewer--proposition-atom-912--list-item"
                    >
                      <div
                        class="entity-viewer"
                      >
                        <div
                          class="entity-viewer--header"
                        >
                          <a
                            href="/p/912/the-proposition-text-2"
                          >
                            <i
                              class="md-icon material-icons"
                              role="presentation"
                              title="Proposition"
                            >
                              short_text
                            </i>
                          </a>
                        </div>
                        <div
                          class="entity-viewer--entity"
                        >
                          <div
                            class="proposition-viewer"
                            id="justification-1582-chat-bubble-basis-viewer--proposition-atom-912--list-item--proposition"
                          >
                            <div
                              class="proposition-viewer"
                            >
                              <div
                                class="proposition-text"
                              >
                                <a
                                  href="/p/912/the-proposition-text-2?context-trail=j,1582,p"
                                >
                                  The proposition text 2
                                </a>
                              </div>
                              <div
                                class="relation-counts"
                              >
                                <a
                                  href="/p/912/the-proposition-text-2?context-trail=j,1582,p"
                                >
                                  <span
                                    title="0 supporting justifications; 0 opposing justifications"
                                  >
                                    <span
                                      class="material-symbols"
                                      style="font-variation-settings: "opsz" 12; font-size: 12px;"
                                    >
                                      merge
                                    </span>
                                    0
                                    +/
                                    0
                                    -
                                  </span>
                                </a>
                                 
                                <a
                                  href="/propositions/912/usages"
                                  title="used in 0 justifications"
                                >
                                  <span
                                    class="material-symbols"
                                    style="font-variation-settings: "opsz" 12; font-size: 12px;"
                                  >
                                    merge_type
                                  </span>
                                  0
                                </a>
                                 
                                <span
                                  class="entity-status-text"
                                >
                                  <a
                                    class="clickable"
                                    title="0 appearances"
                                  >
                                    <span
                                      class="material-symbols"
                                      style="font-variation-settings: "opsz" 12; font-size: 12px;"
                                    >
                                      pin_drop
                                    </span>
                                    0
                                  </a>
                                </span>
                              </div>
                              <div>
                                <span
                                  class="entity-status-text"
                                >
                                  created
                                  
                                   
                                  <span
                                    title=""
                                  />
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </li>
                  </ol>
                </div>
                <div
                  aria-expanded="false"
                  aria-haspopup="true"
                  class="md-layover md-layover--simplified md-inline-block md-menu-container context-menu justification-context-menu"
                  id="justification-1582-context-menu"
                >
                  <button
                    class="md-btn md-btn--icon md-pointer--hover md-inline-block hidden"
                    id="justification-1582-context-menu-toggle"
                    title="Justification actions"
                    type="button"
                  >
                    <div
                      class="md-ink-container"
                    />
                    <i
                      class="md-icon material-icons md-text--inherit"
                    >
                      more_vert
                    </i>
                  </button>
                </div>
              </div>
              <div
                class="md-cell md-cell--12 actions"
              >
                <button
                  class="rmd-button rmd-button--icon rmd-button--text-primary inactive hiding"
                  title="Verify this justification"
                  type="button"
                >
                  <i
                    aria-hidden="true"
                    class="rmd-icon rmd-icon--font material-icons"
                  >
                    thumb_up
                  </i>
                  <span
                    class="rmd-ripple-container"
                  />
                </button>
                <button
                  class="rmd-button rmd-button--icon rmd-button--text-primary inactive hiding"
                  title="Dis-verify this justification"
                  type="button"
                >
                  <i
                    aria-hidden="true"
                    class="rmd-icon rmd-icon--font material-icons"
                  >
                    thumb_down
                  </i>
                  <span
                    class="rmd-ripple-container"
                  />
                </button>
                <button
                  class="rmd-button rmd-button--icon rmd-button--text-primary hiding"
                  title="Counter this justification"
                  type="button"
                >
                  <i
                    aria-hidden="true"
                    class="rmd-icon rmd-icon--font material-icons"
                  >
                    reply
                  </i>
                  <span
                    class="rmd-ripple-container"
                  />
                </button>
                <div
                  class="justification-status-text"
                >
                  <span
                    class="entity-status-text"
                  >
                    created
                    
                     
                    <span
                      title=""
                    />
                  </span>
                </div>
              </div>
              <div
                class="counter-justifications"
              >
                <div
                  style="position: relative;"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="md-cell md-cell--6 md-cell--8-tablet md-cell--4-phone proposition-justifications-justification-trees--negative"
        style="position: relative;"
      >
        <h2
          class="md-cell md-cell--12"
          style="transition: transform 600ms ease 0ms, opacity 600ms ease 0ms;"
        >
          Opposing Justifications
        </h2>
        <div
          class="md-cell md-cell--12 cell--centered-contents"
          style="transition: transform 615ms ease 50ms, opacity 615ms ease 50ms;"
        >
          None
        </div>
        <div
          class="md-cell md-cell--12 cell--centered-contents"
          style="transition: transform 630ms ease 100ms, opacity 630ms ease 100ms;"
        >
          <button
            class="rmd-button rmd-button--text rmd-button--text-primary"
            type="button"
          >
            Add one now
            <span
              class="rmd-ripple-container"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
